--- a/app/src/main/res/layout/activity_select_files.xml
+++ b/app/src/main/res/layout/activity_select_files.xml
@@ -10,8 +10,14 @@
         android:id="@+id/select_files_recycler_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:spanCount="4"
+        tools:itemCount="18"
+        tools:listitem="@layout/image_list_view" />
 </androidx.constraintlayout.widget.ConstraintLayout>
