--- a/app/src/main/res/layout/activity_select_files.xml
+++ b/app/src/main/res/layout/activity_select_files.xml
@@ -20,4 +20,16 @@
         app:spanCount="4"
         tools:itemCount="18"
         tools:listitem="@layout/image_list_view" />
+
+    <ImageButton
+        android:id="@+id/nextBtn"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:src="@drawable/ic_tick"
+        android:background="@drawable/round_button_disabled"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
