--- a/app/src/main/res/layout/image_list_view.xml
+++ b/app/src/main/res/layout/image_list_view.xml
@@ -22,6 +22,8 @@
         android:layout_height="24dp"
         android:layout_marginStart="2dp"
         android:layout_marginTop="2dp"
+        android:buttonTint="@color/design_default_color_primary"
+        android:button="@drawable/ciruclar_checkbox"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
