--- a/app/src/main/res/layout/activity_select_folder.xml
+++ b/app/src/main/res/layout/activity_select_folder.xml
@@ -20,4 +20,15 @@
         app:spanCount="2"
         tools:listitem="@layout/folder_view"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"/>
+
+    <ProgressBar
+        android:id="@+id/progressBar_select_folder"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
