--- a/app/src/main/res/layout/file_for_lock_view.xml
+++ b/app/src/main/res/layout/file_for_lock_view.xml
@@ -7,8 +7,8 @@
 
     <ImageView
         android:id="@+id/lock_file_imageview"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
+        android:layout_width="60dp"
+        android:layout_height="50dp"
         android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -17,36 +17,22 @@
     <Spinner
         android:id="@+id/spinner"
         android:layout_width="197dp"
-        android:layout_height="70dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="@+id/lock_file_imageview"
         app:layout_constraintStart_toEndOf="@+id/lock_file_imageview"
         app:layout_constraintTop_toTopOf="@+id/lock_file_imageview"
         app:layout_constraintVertical_bias="0.49" />
 
-    <EditText
-        android:id="@+id/days_editText"
+    <TextView
+        android:id="@+id/set_date_textView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:ems="10"
-        android:inputType="number"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:gravity="center"
+        android:text="Set Date"
+        app:layout_constraintBottom_toBottomOf="@+id/spinner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/spinner"
-        app:layout_constraintTop_toTopOf="@+id/lock_file_imageview"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <EditText
-        android:id="@+id/date_editText"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:ems="10"
-        android:inputType="date"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="@+id/lock_file_imageview"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/spinner"
-        app:layout_constraintTop_toTopOf="@+id/lock_file_imageview" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
