--- a/app/src/main/res/layout/folder_view.xml
+++ b/app/src/main/res/layout/folder_view.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="5dp">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/folder_image_view"
         android:layout_width="165dp"
         android:layout_height="165dp"
-        android:layout_marginTop="10dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="5dp"
         android:background="?android:attr/selectableItemBackground"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
@@ -20,17 +23,12 @@
 
     <TextView
         android:id="@+id/folder_name_text_view"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="1dp"
+        android:layout_gravity="center"
         android:layout_marginTop="5dp"
-        android:layout_marginBottom="3dp"
         android:text="Camera"
         android:textColor="@android:color/primary_text_light"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/folder_image_view"
-        app:layout_constraintStart_toStartOf="@+id/folder_image_view"
-        app:layout_constraintTop_toBottomOf="@+id/folder_image_view" />
+        android:textSize="16sp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
