--- a/app/src/main/res/layout/image_list_view.xml
+++ b/app/src/main/res/layout/image_list_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
@@ -10,11 +10,7 @@
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:scaleType="centerCrop"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/backgrounds/scenic" />
+        tools:srcCompat="@tools:sample/backgrounds/scenic[1]" />
 
     <CheckBox
         android:id="@+id/checkbox_images_list"
@@ -22,8 +18,6 @@
         android:layout_height="24dp"
         android:layout_marginStart="2dp"
         android:layout_marginTop="2dp"
-        android:buttonTint="@color/design_default_color_primary"
         android:button="@drawable/ciruclar_checkbox"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:buttonTint="@color/design_default_color_primary" />
+</RelativeLayout>
