--- a/app/src/main/res/layout/image_list_view.xml
+++ b/app/src/main/res/layout/image_list_view.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
@@ -11,12 +12,10 @@
         android:scaleType="centerCrop"
         tools:srcCompat="@tools:sample/backgrounds/scenic[1]" />
 
-    <CheckBox
+    <ImageView
         android:id="@+id/checkbox_images_list"
-        android:layout_width="23dp"
-        android:layout_height="24dp"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="2dp"
-        android:button="@drawable/ciruclar_checkbox"
-        android:buttonTint="@color/design_default_color_primary" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:srcCompat="@drawable/ic_circular_checkbox_checked" />
 </RelativeLayout>
