--- a/app/src/main/res/layout/activity_select_files.xml
+++ b/app/src/main/res/layout/activity_select_files.xml
@@ -21,6 +21,7 @@
         android:layout_below="@id/toolbar"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
+        android:layoutAnimation="@anim/layout_animation"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:spanCount="4"
         tools:itemCount="18"
