--- a/app/src/main/res/layout/activity_lock_files.xml
+++ b/app/src/main/res/layout/activity_lock_files.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.LockFiles.LockFilesActivity">
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/set_time_lock_activity"
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
         android:layout_width="0dp"
         android:layout_height="43dp"
@@ -15,11 +15,11 @@
         android:layout_marginEnd="13dp"
         android:background="@drawable/custom_button_style"
         android:text="SET TIME"
-        app:layout_constraintBottom_toBottomOf="@+id/set_date_lock_files"
+        app:layout_constraintBottom_toBottomOf="@+id/set_date_lock_activity"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/set_date_lock_files"
-        app:layout_constraintTop_toTopOf="@+id/set_date_lock_files" />
+        app:layout_constraintStart_toEndOf="@+id/set_date_lock_activity"
+        app:layout_constraintTop_toTopOf="@+id/set_date_lock_activity" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/lock_items_recyclerview"
@@ -48,7 +48,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
-        android:id="@+id/set_date_lock_files"
+        android:id="@+id/set_date_lock_activity"
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
         android:layout_width="0dp"
         android:layout_height="43dp"
@@ -57,7 +57,7 @@
         android:background="@drawable/custom_button_style"
         android:text="Set Date"
         app:layout_constraintBottom_toBottomOf="@+id/textView5"
-        app:layout_constraintEnd_toStartOf="@+id/textView3"
+        app:layout_constraintEnd_toStartOf="@+id/set_time_lock_activity"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/textView5"
         app:layout_constraintTop_toTopOf="@+id/textView5" />
