--- a/app/src/main/res/layout/file_for_lock_view.xml
+++ b/app/src/main/res/layout/file_for_lock_view.xml
@@ -16,24 +16,24 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/set_date_textView"
+        android:id="@+id/set_time_lock_file"
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
         android:layout_width="0dp"
         android:layout_height="30dp"
         android:layout_marginTop="3dp"
         android:background="@drawable/custom_button_style"
-        android:text="Set Date"
-        app:layout_constraintEnd_toEndOf="@+id/textView"
-        app:layout_constraintStart_toStartOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        android:text="Set Time"
+        app:layout_constraintEnd_toEndOf="@+id/set_date_lock_file"
+        app:layout_constraintStart_toStartOf="@+id/set_date_lock_file"
+        app:layout_constraintTop_toBottomOf="@+id/set_date_lock_file" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/set_date_lock_file"
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
         android:layout_width="100dp"
         android:layout_height="30dp"
         android:background="@drawable/custom_button_style"
-        android:text="Set Time"
+        android:text="Set Date"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -46,7 +46,7 @@
         android:textAlignment="center"
         android:text="File Name"
         app:layout_constraintBottom_toBottomOf="@+id/lock_file_imageview"
-        app:layout_constraintEnd_toStartOf="@+id/set_date_textView"
+        app:layout_constraintEnd_toStartOf="@+id/set_time_lock_file"
         app:layout_constraintStart_toEndOf="@+id/lock_file_imageview"
         app:layout_constraintTop_toTopOf="@+id/lock_file_imageview" />
 
