--- a/app/src/main/res/layout/saved_photo_view.xml
+++ b/app/src/main/res/layout/saved_photo_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,11 +9,7 @@
     <ImageView
         android:id="@+id/saved_photo_image_view"
         android:layout_width="130dp"
-        android:layout_height="130dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        android:layout_height="130dp" />
 
     <TextView
         android:id="@+id/textView"
@@ -23,8 +19,19 @@
         android:text="Name of Photo"
         android:textAlignment="center"
         android:textSize="16sp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="@+id/saved_photo_image_view"
-        app:layout_constraintEnd_toEndOf="@+id/saved_photo_image_view"
-        app:layout_constraintStart_toStartOf="@+id/saved_photo_image_view" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:visibility="gone" />
+
+    <TextView
+        android:id="@+id/time_remaing_textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/saved_photo_image_view"
+        android:layout_alignTop="@+id/saved_photo_image_view"
+        android:layout_alignParentTop="false"
+        android:layout_marginTop="5dp"
+        android:background="#E40000"
+        android:padding="2dp"
+        android:text="12 hours"
+        android:textColor="#FFFFFF" />
+
+</RelativeLayout>
