--- a/app/src/main/res/layout/image_list_view.xml
+++ b/app/src/main/res/layout/image_list_view.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -13,11 +12,16 @@
         android:scaleType="centerCrop"
         tools:srcCompat="@tools:sample/backgrounds/scenic[1]" />
 
-    <ImageView
+    <CheckBox
         android:id="@+id/checkbox_images_list"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_centerInParent="true"
-        android:visibility="gone"
-        app:srcCompat="@drawable/ic_check" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignStart="@id/imageView_images_list"
+        android:layout_alignTop="@id/imageView_images_list"
+        android:layout_alignEnd="@id/imageView_images_list"
+        android:layout_alignBottom="@id/imageView_images_list"
+        android:layout_alignParentEnd="false"
+        android:layout_centerVertical="true"
+        android:button="@drawable/custom_check_box"
+        android:visibility="visible" />
 </RelativeLayout>
