--- a/app/src/main/res/layout/fragment_photos.xml
+++ b/app/src/main/res/layout/fragment_photos.xml
@@ -6,6 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".ui.photos.PhotosFragment">
 
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh_photos_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview_photo_fragment"
         android:layout_width="0dp"
@@ -31,4 +36,14 @@
         android:src="@drawable/ic_add_photos"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/progressBar_photos_fragment"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
