--- a/app/src/main/res/menu/option_menu_main_acitivity.xml
+++ b/app/src/main/res/menu/option_menu_main_acitivity.xml
@@ -3,6 +3,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:icon="@drawable/ic_add_folder"
+        android:title="Add Folder"
+        app:showAsAction="always" />
+    <item android:title="Rate App" />
+    <item
+        android:icon="@drawable/ic_update_time"
         android:title="Update Time"
         app:showAsAction="always" />
+    <item
+        android:icon="@drawable/ic_settings"
+        android:title="Settings"
+        app:showAsAction="ifRoom" />
 </menu>
