bottom sheet dialog added

--- a/app/src/main/res/layout/fragment_photos.xml
+++ b/app/src/main/res/layout/fragment_photos.xml
@@ -21,7 +21,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:listitem="@layout/saved_photo_view">
+            tools:listitem="@layout/saved_file_view">
 
         </androidx.recyclerview.widget.RecyclerView>
 
