--- a/app/src/main/res/layout/saved_file_view.xml
+++ b/app/src/main/res/layout/saved_file_view.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="8dp">
@@ -31,5 +32,15 @@
         android:padding="2dp"
         android:text="12 hours"
         android:textColor="#FFFFFF" />
+
+    <ImageView
+        android:id="@+id/more_option_lock_file_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/saved_photo_image_view"
+        android:layout_alignBottom="@+id/saved_photo_image_view"
+        android:layout_marginEnd="3dp"
+        android:layout_marginBottom="3dp"
+        app:srcCompat="@drawable/ic_more" />
 
 </RelativeLayout>
