--- a/app/src/main/res/layout/fragment_b_s_dialog.xml
+++ b/app/src/main/res/layout/fragment_b_s_dialog.xml
@@ -8,7 +8,7 @@
     tools:context=".Dialogs.BSDialogFragment">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/share_btn_saved_file"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackground"
@@ -21,7 +21,7 @@
         android:textSize="24sp" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/extend_date_btn_saved_file"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackground"
@@ -34,7 +34,7 @@
         android:textSize="24sp" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/info_btn_saved_file"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackground"
@@ -47,7 +47,7 @@
         android:textSize="24sp" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/delete_btn_saved_file"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackground"
