--- a/app/src/main/res/layout/custom_alert_dialog.xml
+++ b/app/src/main/res/layout/custom_alert_dialog.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/roboto_condensed_regular"
         android:text="@string/delete"
+        android:textColor="?attr/colorOnPrimary"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
