--- a/app/src/main/res/drawable/round_button_enabled.xml
+++ b/app/src/main/res/drawable/round_button_enabled.xml
@@ -7,7 +7,7 @@
     </item>
     <item android:state_pressed = "true">
         <shape android:shape = "oval">
-            <solid android:color = "@color/blue_dark"/>
+            <solid android:color = "@color/blue"/>
         </shape>
     </item>
 </selector>
