--- a/app/src/main/res/drawable/custom_check_box.xml
+++ b/app/src/main/res/drawable/custom_check_box.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="true" android:drawable="@drawable/ic_check">
-        <color android:color="@color/black_opacity_25"/>
+        <color android:color="@color/white"/>
     </item>
     <item android:state_checked="false" android:drawable="@drawable/no_drawable"/>
 </selector>
