--- a/app/src/main/res/drawable/dark_stroke.xml
+++ b/app/src/main/res/drawable/dark_stroke.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:color="@color/black_opacity_25"
-        android:width="1dp" />
+    <stroke android:color="?attr/colorTertiary"
+        android:width="0.5dp" />
+    <corners android:radius="5dp"/>
 </shape>
