--- a/app/src/main/res/layout/file_for_lock_view.xml
+++ b/app/src/main/res/layout/file_for_lock_view.xml
@@ -10,45 +10,50 @@
     <ImageView
         android:id="@+id/lock_file_imageview"
         android:layout_width="70dp"
-        android:layout_height="60dp"
+        android:layout_height="70dp"
         android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/set_time_lock_file"
-        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+        style="@style/custom_text_view_button"
         android:layout_width="0dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="3dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="4dp"
         android:background="@drawable/date_time_button_background"
         android:text="Set Time"
-        app:layout_constraintEnd_toEndOf="@+id/set_date_lock_file"
-        app:layout_constraintStart_toStartOf="@+id/set_date_lock_file"
-        app:layout_constraintTop_toBottomOf="@+id/set_date_lock_file" />
+        app:layout_constraintEnd_toStartOf="@+id/set_date_lock_file"
+        app:layout_constraintStart_toEndOf="@+id/lock_file_imageview"
+        app:layout_constraintTop_toTopOf="@+id/lock_file_imageview" />
 
     <TextView
         android:id="@+id/set_date_lock_file"
-        style="@style/Widget.AppCompat.Button.Borderless.Colored"
-        android:layout_width="100dp"
-        android:layout_height="30dp"
+        style="@style/custom_text_view_button"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="4dp"
         android:background="@drawable/date_time_button_background"
         android:text="Set Date"
+        app:layout_constraintBottom_toBottomOf="@+id/set_time_lock_file"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/set_time_lock_file"
+        app:layout_constraintTop_toTopOf="@+id/set_time_lock_file" />
 
     <TextView
         android:id="@+id/lock_file_title"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:gravity="center"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
         android:padding="5dp"
-        android:textAlignment="center"
         android:text="File Name"
         app:layout_constraintBottom_toBottomOf="@+id/lock_file_imageview"
-        app:layout_constraintEnd_toStartOf="@+id/set_time_lock_file"
-        app:layout_constraintStart_toEndOf="@+id/lock_file_imageview"
-        app:layout_constraintTop_toTopOf="@+id/lock_file_imageview" />
+        app:layout_constraintEnd_toEndOf="@+id/set_date_lock_file"
+        app:layout_constraintStart_toStartOf="@+id/set_time_lock_file"
+        app:layout_constraintTop_toBottomOf="@+id/set_time_lock_file" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
