--- a/app/src/main/res/layout/fragment_photos.xml
+++ b/app/src/main/res/layout/fragment_photos.xml
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
-            android:backgroundTint="#FFFFFF"
+            android:backgroundTint="@color/white"
             android:clickable="true"
             android:src="@drawable/ic_add_photos"
             app:layout_constraintBottom_toBottomOf="parent"
