--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="blue_light">#7b7cff</color>
+    <color name="blue">#304fff</color>
+    <color name="blue_dark">#0026ca</color>
+    <color name="purple_dark">#6200ea</color>
+    <color name="purple_light">#9d46ff</color>
+
+
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
@@ -12,5 +14,8 @@
     <color name="light_red">#FF3D00</color>
     <color name="transparent">#0000FFFF</color>
 
-    <color name="blue">#2196F3</color>
+    <color name="custom_blue">#2196F3</color>
+
+    <color name="light_blue">#EBF6FF</color>
+    <color name="dark_blue">#0A192F</color>
 </resources>
