some changes related to action menu

--- a/app/src/main/res/layout/activity_select_folder.xml
+++ b/app/src/main/res/layout/activity_select_folder.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.selectfolder.SelectFolderActivity">
 
     <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/materialToolbar"
+        android:id="@+id/toolbarPhotosFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
@@ -18,7 +18,7 @@
         android:id="@+id/select_folder_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/materialToolbar"
+        android:layout_below="@id/toolbarPhotosFragment"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
         android:layoutAnimation="@anim/layout_animation"
