--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,6 +16,8 @@
         <item name="android:windowBackground">@color/light_blue</item>
 
         <item name="colorTertiary">@color/black</item>
+        <!-- This allow Action Mode show on top of toolbar -->
+        <item name="windowActionModeOverlay">true</item>
     </style>
 
     <style name="ShapeAppearanceOverlay.App.CornerSize50Percent" parent="">
